soluciones/v2/execute-after/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: laravel-ingress
  namespace: laravel
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: prod.luiso.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: laravel
            port:
              number: 80
  - host: dev.luiso.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: phpmyadmin
            port:
              number: 80
